--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dvrsowzhf/image/upload/v1652471530/Logotipo_Restaurante_Crema-removebg-preview_o8dwsn.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>El Gran Sarten</title>
   </head>
   <body>
     <div id="root"></div>
